--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Install NNCF and test requirements
         run: make install-openvino-test
       - name: Install OpenVINO Nightly
-        run: pip install -U --pre openvino openvino-tokenizers --extra-index-url https://storage.openvinotoolkit.org/simple/wheels/nightly
+        run: pip install -U --pre openvino==2024.5.0.dev20241015 --extra-index-url https://storage.openvinotoolkit.org/simple/wheels/nightly
       - name: Print installed modules
         run: pip list
       - name: Run OV precommit test scope
