--- a/tests/post_training/data/wc_reference_data_2024.5.yaml
+++ b/tests/post_training/data/wc_reference_data_2024.5.yaml
@@ -1,7 +1,8 @@
 tinyllama_NF4_scale_estimation_stateful_per_channel_backend_OV:
-  metric_value: 0.87132
+  metric_value: 0.88663
   num_int4: 11
   num_int8: 290
+  metrics_xfail_reason: "Issue-148819"
 tinyllama_int4_data_free_backend_TORCH:
   metric_value: 0.73873
   num_int4: 114
@@ -22,6 +23,11 @@ tinyllama_data_aware_awq_stateful_backend_OV:
   metric_value: 0.85616
   num_int4: 94
   num_int8: 124
+tinyllama_data_aware_gptq_scale_estimation_stateful_backend_OV:
+  metric_value: 0.86503
+  num_int4: 94
+  num_int8: 124
+  metrics_xfail_reason: "Issue-148819"
 tinyllama_scale_estimation_per_channel_backend_OV:
   metric_value: 0.81389
   num_int4: 188
