--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Print installed modules
         run: pip list
       - name: Run examples test scope
-        run: pytest tests/cross_fw/install -s --host-configuration cpu --backend ${{ matrix.backend }}
+        run: pytest tests/cross_fw/install -s --host-configuration cpu --backend ${{ matrix.backend }} -k "not virtualenv"
 
   install-torch-gpu:
     name: Test install [torch-gpu]
@@ -45,7 +45,7 @@ jobs:
       - name: Install dependencies
         run : |
           sudo apt-get update
-          sudo apt-get --assume-yes install build-essential ninja-build libgl1-mesa-dev libglib2.0-0 wget make
+          sudo apt-get --assume-yes install build-essential ninja-build libgl1-mesa-dev libglib2.0-0 wget make virtualenv
       - name: Download CUDA
         run: |
           wget -q https://developer.download.nvidia.com/compute/cuda/12.4.0/local_installers/cuda_12.4.0_550.54.14_linux.run
@@ -75,4 +75,4 @@ jobs:
         run: |
           export PATH=/usr/local/cuda-12.4/bin${PATH:+:${PATH}}
           export LD_LIBRARY_PATH=/usr/local/cuda-12.4/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}
-          pytest tests/cross_fw/install -s --host-configuration gpu --backend torch
+          pytest tests/cross_fw/install -s --host-configuration gpu --backend torch -k "not virtualenv"
