--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   install-cpu:
     name: Test install [${{ matrix.backend }}]
-    runs-on: ubuntu-22.04-8-cores
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
