--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,7 @@ examples/post_training_quantization/openvino/yolov8/yolov8n*
 examples/post_training_quantization/openvino/yolov8_quantize_with_accuracy_control/yolov8n*
 examples/**/runs/**
 examples/**/results/**
+examples/llm_compression/openvino/tiny_llama_find_hyperparams/statistics
 compressed_graph.dot
 original_graph.dot
 datasets/**
