--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -64,8 +64,8 @@ jobs:
           cache: pip
       - name: Install NNCF and test requirements
         run: make install-openvino-test
-      - name: Install OpenVINO Nightly
-        run: pip install -U --pre openvino==2024.5.0.dev20241015 --extra-index-url https://storage.openvinotoolkit.org/simple/wheels/nightly
+      - name: Install OpenVINO 2024.5
+        run: pip install -U --pre openvino==2024.5.0rc2 openvino-tokenizers==2024.5.0rc2 --extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release
       - name: Print installed modules
         run: pip list
       - name: Run OV precommit test scope
