--- a/.gitignore
+++ b/.gitignore
@@ -126,6 +126,7 @@ examples/**/*.onnx
 examples/**/statistics
 examples/**/runs
 examples/**/results
+examples/**/metrics.json
 
 # Tests
 tests/**/runs/**
