--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -44,7 +44,7 @@ jobs:
           cache: pip
       - name: cpuinfo
         run: cat /proc/cpuinfo
-      - name: Install NNCF and test requirements
+      - name: Install test requirements
         run: |
           pip install -r tests/cross_fw/examples/requirements.txt
       - name: Print installed modules
