--- a/tests/post_training/requirements.txt
+++ b/tests/post_training/requirements.txt
@@ -1,6 +1,4 @@
 -c ../../constraints.txt
---extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release
---pre
 openvino-genai
 openvino
 torch
@@ -23,5 +21,5 @@ tensorflow-io==0.32.0
 timm==0.9.2
 accelerate==1.1.0
 transformers==4.48.3
-whowhatbench @ git+https://github.com/anzr299/openvino.genai.git@releases/2025/1#subdirectory=tools/who_what_benchmark
+whowhatbench @ git+https://github.com/openvinotoolkit/openvino.genai.git@releases/2025/1#subdirectory=tools/who_what_benchmark
 datasets==3.1.0
