--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -24,62 +24,62 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  examples-cpu:
-    name: Test examples CPU [${{ matrix.group }}/4]
-    runs-on: ubuntu-latest-16-cores
-    timeout-minutes: 80
-    strategy:
-      fail-fast: false
-      matrix:
-        group: [1, 2, 3, 4]
-    defaults:
-      run:
-        shell: bash
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-            lfs: true
-            fetch-depth: 0  # Fetch full history to allow checking out any branch or PR
-      - name: Fetch and Checkout the Pull Request Branch
-        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.pull_request_number != '' }}
-        run: |
-          git fetch origin pull/${{ github.event.inputs.pull_request_number }}/head:pr-${{ github.event.inputs.pull_request_number }}
-          git checkout pr-${{ github.event.inputs.pull_request_number }}
-      - uses: actions/setup-python@8d9ed9ac5c53483de85588cdf95a591a75ab9f55 # v5.5.0
-        with:
-          python-version: 3.10.14
-      - name: cpuinfo
-        run: cat /proc/cpuinfo
-      - name: Install test requirements
-        run: |
-          pip install -r tests/cross_fw/examples/requirements.txt
-      - name: Print installed modules
-        run: pip list
-      - name: Run examples test scope
-        run: |
-          set +e
-          python -m pytest -s -m "not cuda" -ra tests/cross_fw/examples \
-            --junit-xml=pytest-results.xml \
-            --durations-path=tests/cross_fw/examples/.test_durations_cpu \
-            --splitting-algorithm=least_duration \
-            --splits 4 \
-            --group ${{ matrix.group }} \
-            ${{ github.event.inputs.pytest_args || '' }}
-          ret=$?
-          [ $ret -eq 5 ] && [ -n "${{ github.event.inputs.pytest_args || '' }}" ]  && exit 0 || exit $ret
-        env:
-          TQDM_DISABLE: 1
-      - name: Test Summary
-        if: ${{ !cancelled() }}
-        run: |
-          pip install defusedxml==0.7.1
-          python .github/scripts/pytest_md_summary.py pytest-results.xml >> $GITHUB_STEP_SUMMARY
+  # examples-cpu:
+  #   name: Test examples CPU [${{ matrix.group }}/4]
+  #   runs-on: ubuntu-latest-16-cores
+  #   timeout-minutes: 80
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       group: [1, 2, 3, 4]
+  #   defaults:
+  #     run:
+  #       shell: bash
+  #   steps:
+  #     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+  #       with:
+  #           lfs: true
+  #           fetch-depth: 0  # Fetch full history to allow checking out any branch or PR
+  #     - name: Fetch and Checkout the Pull Request Branch
+  #       if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.pull_request_number != '' }}
+  #       run: |
+  #         git fetch origin pull/${{ github.event.inputs.pull_request_number }}/head:pr-${{ github.event.inputs.pull_request_number }}
+  #         git checkout pr-${{ github.event.inputs.pull_request_number }}
+  #     - uses: actions/setup-python@8d9ed9ac5c53483de85588cdf95a591a75ab9f55 # v5.5.0
+  #       with:
+  #         python-version: 3.10.14
+  #     - name: cpuinfo
+  #       run: cat /proc/cpuinfo
+  #     - name: Install test requirements
+  #       run: |
+  #         pip install -r tests/cross_fw/examples/requirements.txt
+  #     - name: Print installed modules
+  #       run: pip list
+  #     - name: Run examples test scope
+  #       run: |
+  #         set +e
+  #         python -m pytest -s -m "not cuda" -ra tests/cross_fw/examples \
+  #           --junit-xml=pytest-results.xml \
+  #           --durations-path=tests/cross_fw/examples/.test_durations_cpu \
+  #           --splitting-algorithm=least_duration \
+  #           --splits 4 \
+  #           --group ${{ matrix.group }} \
+  #           ${{ github.event.inputs.pytest_args || '' }}
+  #         ret=$?
+  #         [ $ret -eq 5 ] && [ -n "${{ github.event.inputs.pytest_args || '' }}" ]  && exit 0 || exit $ret
+  #       env:
+  #         TQDM_DISABLE: 1
+  #     - name: Test Summary
+  #       if: ${{ !cancelled() }}
+  #       run: |
+  #         pip install defusedxml==0.7.1
+  #         python .github/scripts/pytest_md_summary.py pytest-results.xml >> $GITHUB_STEP_SUMMARY
 
   examples-cuda:
     name: Test examples CUDA [${{ matrix.group }}/1]
     runs-on: aks-linux-4-cores-28gb-gpu-tesla-t4
     timeout-minutes: 40
-    if: ${{ inputs.gpu_enabled == true }}
+    # if: ${{ inputs.gpu_enabled == true }}
     strategy:
       fail-fast: false
       matrix:
