--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -18,6 +18,7 @@ on:
 
 jobs:
   pytest:
+    if: False
     uses: ./.github/workflows/call_precommit.yml
     with:
       python_version: "3.10.14"
