--- a/examples/llm_compression/torch/qat_with_lora/requirements.txt
+++ b/examples/llm_compression/torch/qat_with_lora/requirements.txt
@@ -1,5 +1,5 @@
-tqdm
-tensorboard
+tensorboard==2.13.0
+torch==2.6.0
 whowhatbench @ git+https://github.com/openvinotoolkit/openvino.genai@releases/2025/1#subdirectory=tools/who_what_benchmark
 --extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release/ --pre
 numpy>=1.23.5,<2
