--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -185,6 +185,7 @@ jobs:
           export LIB="${LIB};$(python -c "import sys; print(sys.prefix + '/libs')")"
           export INCLUDE="${INCLUDE};$(python -c "import sysconfig; print(sysconfig.get_path('include'))")"
           python -m pytest -s -ra tests/cross_fw/examples \
+            -m 'not cuda' \
             --junit-xml=pytest-results.xml \
             --durations-path=tests/cross_fw/examples/.test_durations \
             --splitting-algorithm=least_duration \
